--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sqflite_common_ffi: any
+  sqflite_common_ffi_web: any
   flutter:
     sdk: flutter
   http: 1.1.0
@@ -36,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: 6.1.0
+  sqflite: any
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
